# pf-server

./: .env.example  .gitignore  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli/: pf_cli.py
docker/: Dockerfile.user-container  opencode-mcp-config.json
src/pf_mcp/: __init__.py  auth.py  mcp.py
src/pf_mcp/prompts/: ask.jinja2
src/pf_server/: auth.py  config.py  containers.py  feedback_constants.py  guess.py  guess_configs.py  log_viewer.py  logging_config.py  main.py  models.py  opencode_client.py  opencode_manager.py  opencode_session.py  plan_executor.py  plan_generator.py  plan_manager.py  session_manager.py  sse_listener.py  tar_utils.py  user_context.py  ws_proxy.py
src/pf_server/repo_manager/: __init__.py  diff_parser.py  manager.py  tag_state.py
tests/: conftest.py  test_auth.py  test_core.py  test_diff_parser.py  test_endpoints.py  test_file_changes.py  test_guess_configs.py  test_mcp_integration.py  test_opencode_client.py  test_opencode_manager.py  test_plan_manager.py  test_repo_manager.py  test_session_manager.py  test_tag_state.py  test_tar_utils.py
